# typst-mcp

./: .gitignore  .gitmodules  .mcp.json  README.md  SECURITY.md  pyproject.toml
.github/workflows/: update-typst-submodule.yml
docs/: ADVANCED_SETUP.md
examples/: package_docs_demo.py  resource_workflow.md
typst_mcp/: __init__.py  build_docs.py  models.py  package_docs.py  sandbox.py  server.py  settings.py
